Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83751

Qmlscene (live preview) crashes if project has view3D and some changes are made

    XMLWordPrintable

Details

    • 3
    • 45b3b76a9529e31fc1b0d7423400d9a76cfef67d (qt/qtquick3d/5.15) 7505d1c7f1a490ee4097a9de32e5089ecda249bb (qt/qtquick3d/dev)
    • QDS 3D - Week 27/28

    Description

      Steps to reproduce:

      1. Create a project
      2. Add view3d
      3. Click Live Preview -button
      4. -> qmlscene opens, leave it open
      5. Open the Form Editor
      6. Change the position of the view3D by dragging it in the Form Editor
      7. -> qmlscene crashes

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            tanja_remes Tanja Remes
            Pasi Keränen Pasi Keränen
            Andy Nichols Andy Nichols
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes