Remove deleted render context interfaces from cache

g_renderContexts global static caches the render context interface
for each window. However, there was no mechanism to clear the cache
in case the interface gets deleted, leading to corrupted interface
being returned from the cache in the future. Now the interface is
cleared from the cache upon its deletion.

This fixes QML Designer live preview crash.

Change-Id: Id019027cc5ff6b7a47bcd46fd76c5a78e6520d53
Fixes: QTBUG-83751
Reviewed-by: Andy Nichols <andy.nichols@qt.io>